force-app/main/default/objects/GetFeedback_Aut__Answer__c/GetFeedback_Aut__Answer__c.object-meta.xml
<CustomObject>
    <label>Answer</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Answer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>