force-app/main/default/objects/GetFeedback_Aut__Answer__c/fields/GetFeedback_Aut__Choice1__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__Choice1__c</fullName>
    <label>Choice 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>