force-app/main/default/objects/GetFeedback_Aut__Answer__c/fields/GetFeedback_Aut__Choices__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__Choices__c</fullName>
    <label>Choices</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>