force-app/main/default/objects/GetFeedback_Aut__Answer__c/fields/GetFeedback_Aut__Contact__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>