force-app/main/default/objects/GetFeedback_Aut__Answer__c/fields/GetFeedback_Aut__Email__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>