force-app/main/default/objects/GetFeedback_Aut__Answer__c/fields/GetFeedback_Aut__GetFeedbackId__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__GetFeedbackId__c</fullName>
    <externalId>true</externalId>
    <label>GetFeedbackId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>