force-app/main/default/objects/GetFeedback_Aut__Answer__c/fields/GetFeedback_Aut__GridItem__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__GridItem__c</fullName>
    <label>GridItem</label>
    <length>155</length>
    <type>Text</type>
</CustomField>