force-app/main/default/objects/GetFeedback_Aut__Answer__c/fields/GetFeedback_Aut__IsDetractor__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__IsDetractor__c</fullName>
    <formula>AND(GetFeedback_Aut__QuestionType__c == &apos;NetPromoter&apos;, NOT(ISBLANK(GetFeedback_Aut__Number__c)), GetFeedback_Aut__Number__c &lt;= 6)</formula>
    <label>IsDetractor</label>
    <type>Checkbox</type>
</CustomField>