force-app/main/default/objects/GetFeedback_Aut__Answer__c/fields/GetFeedback_Aut__IsPromoter__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__IsPromoter__c</fullName>
    <formula>AND(GetFeedback_Aut__QuestionType__c == &apos;NetPromoter&apos;, GetFeedback_Aut__Number__c &gt;= 9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPromoter</label>
    <type>Checkbox</type>
</CustomField>