force-app/main/default/objects/GetFeedback_Aut__Answer__c/fields/GetFeedback_Aut__Number__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__Number__c</fullName>
    <label>Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>