force-app/main/default/objects/GetFeedback_Aut__Answer__c/fields/GetFeedback_Aut__Phone__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>