force-app/main/default/objects/GetFeedback_Aut__Answer__c/fields/GetFeedback_Aut__QuestionType__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__QuestionType__c</fullName>
    <label>QuestionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>