force-app/main/default/objects/GetFeedback_Aut__Answer__c/fields/GetFeedback_Aut__Response__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__Response__c</fullName>
    <label>Response</label>
    <referenceTo>GetFeedback_Aut__Response__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>