force-app/main/default/objects/GetFeedback_Aut__Answer__c/fields/GetFeedback_Aut__Survey__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__Survey__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; GetFeedback_Aut__Response__r.GetFeedback_Aut__Survey__c, GetFeedback_Aut__Response__r.GetFeedback_Aut__Survey__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey</label>
    <type>Text</type>
</CustomField>